<resources>
    <string name="app_name">CustomView</string>
    <string name="text_title">账号登陆</string>
    <string name="text_inputphone">输入电话号码</string>
    <string name="text_input_verify_code">输入验证码</string>
    <string name="text_get_verify_code">获取验证码</string>
    <string name="text_agree_report">同意 用户协议</string>
    <string name="text_sure">确定</string>
    <string name="text_login">登录</string>


    <style name="cb_test">
        <!--波纹的颜色-->
        <item name="android:colorControlHighlight">@color/colorPrimary</item>
        <!--选中的颜色-->
        <item name="colorAccent">@color/gray</item>
    </style>
</resources>
